# grandmaster

./: CONTRIBUTING.md  Main.ipynb  README.md  SDK.py  TYPES.md  Untitled.ipynb  learn.py  main.py  main2.py  main3.py  make_a_blog_post_out_of_it.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  validate.py
grandmaster/: CONTRIBUTING.md  Code.py  Example.py  Input.py  Model.py  NewTask.py  Output.py  Task.py  Validator.py  Wizard.py  __init__.py  annotations.py  config.py  examples.py  helper.py  inputs.py  outputs.py  parameters.py  tasks.json  tasks.py  transformers.py  x.py
grandmaster/models/: TODO.md  __init__.py
grandmaster/models/ageitgey/: predict.py
grandmaster/models/community/: models.py
grandmaster/models/facebook/: models.py
grandmaster/models/hf/facebook/: models.py
grandmaster/models/hf/openai/: models.py
grandmaster/models/nickmuchi/: predict.py
grandmaster/models/openai/clip/: p.py  predict.py
grandmaster/models/openai/whisper/: predict.py
grandmaster/models/stub/: models.py
grandmaster/proto/: mytypes.py  shared_types.py  shared_types_pb2.py  shared_types_pb2.pyi
grandmaster/templates/: python.mustache  python.py.jinja2
grandmaster/todo/: Grandmaster.py  TODO.md  main.py  setup_to_delete.py
scripts/: test.sh
todo/: mytypes.py
