[metadata]
name = grandmaster
version = 0.0.2
description = Grandmaster AI
author = Jonathan Besomi
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Scientific/Engineering
keywords =
    machine learning
url = https://github.com/grandmasterai/grandmaster
project_urls =
    Documentation = https://grandmaster.ai
    Source Code = https://grandmaster.ai
    Bug Tracker = https://grandmaster.ai
[options]
packages = find:
python_requires = >=3.6.1